fixed spacing in footer

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav:nth-child(2){
 footer nav{
   height: 50px;
   text-align: center;
-  padding: 20px 100px 10px 100px;
+  padding: 20px 100px 10px 50px;
 }
 
 footer>p{
